--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ main {
 #header-section {
   width: 100%;
   height: 100vh;
-  background-image: url('../B12A01-landing-launchpad/Assets/Hero-bg.png');
+  background-image: url('../Imges/Assets/Hero-bg.png');
   background-repeat: no-repeat;
   background-position: center;
 }
