--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ main {
 #header-section {
   width: 100%;
   height: 100vh;
-  background-image: url('../Imges/Assets/Hero-bg.png');
+  background-image: url('../image/Assets/Hero-bg.png');
   background-repeat: no-repeat;
   background-position: center;
 }
